--- a/Restoran/Common/Common.csproj
+++ b/Restoran/Common/Common.csproj
@@ -42,8 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="IRestoran.cs" />
+    <Compile Include="Jelo.cs" />
+    <Compile Include="Meni.cs" />
+    <Compile Include="NaMeniju.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sastojak.cs" />
+    <Compile Include="SeSastoji.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
