Fully set up the service with the database connection (more changes possible). Started working on the backend of the client page.

--- a/Restoran/Common/Common.csproj
+++ b/Restoran/Common/Common.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IRestoran.cs" />
+    <Compile Include="Izuzetak.cs" />
     <Compile Include="Jelo.cs" />
     <Compile Include="Meni.cs" />
     <Compile Include="NaMeniju.cs" />
